# Learn-Mint

./: .gitignore  Backup_Documentation.md  README.md
.github/workflows/: main.yml
contracts/: Cargo.toml
contracts/course-quiz/: Cargo.toml
contracts/course-quiz/src/: contract.rs  lib.rs  storage_types.rs  test.rs
contracts/reward-token/: Cargo.toml
contracts/reward-token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/components/: AnimatedStat.tsx  BottomTicker.tsx  CertificatePanel.tsx  CourseCatalog.tsx  CourseInfoPanel.tsx  CourseView.tsx  FilmGrain.tsx  HeroIcons.tsx  NavBar.tsx  QuizModule.tsx  RecentGraduates.tsx  Toast.tsx  VideoPlayer.tsx
frontend/src/context/: WalletProvider.tsx
frontend/src/data/: courses.ts
frontend/src/hooks/: useLocalStorage.ts  useQuizState.ts  useVideoProgress.ts
frontend/src/lib/: eventListener.ts  pdfGenerator.ts  stellar.ts
